spotify webplayer coomponents

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,6 +11,6 @@
         <!-- <img src="/static/img/moodmusicbigtext.png" width=499 height=212 /> -->
       </div> 
     <div class="container"></div>
-    <div class="child" id="app"></div>
+    <div class="child" id="App"></div>
 </body>
 </html>
