--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo:wght@900&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +9,39 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color:#333;
   color: #ddd;
-  margin:2em;
+  margin:0;
+  padding:0;
+}
+
+#logo-wrapper {
+  width:80%;
+  margin: 0 10%;
+}
+
+#logo {
+  text-align: left;
+  position: relative;
+  font-family: 'Exo';
+  font-size: 3em;
+  margin: 0 auto;
+  transform: skew(-15deg);
+  letter-spacing: 0.03em;
+}
+
+#logo span:first-child {
+  display: block;
+  text-shadow: 0 0 0.1em #165ff3, 0 0 0.3em black, 0 0 5em #165ff3;
+  -webkit-text-stroke: 0.06em rgba(black, 0.5);
+}
+  
+#logo span:last-child {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-image: linear-gradient(#032d50 25%, #00a1ef 35%, white 50%, #20125f 50%, #8313e7 55%, #ff61af 75%);
+    -webkit-text-stroke: 0.01em #94a0b9;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 code {
@@ -17,6 +51,15 @@ code {
 
 #app {
   text-align:left;
+  background-image: url("background.jpg");
+  background-color: #212529;
+  background-size: cover;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height:100vh;
 }
 
 #container {
@@ -24,21 +67,29 @@ code {
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: auto;
   grid-template-areas: 
-    "header header header"
+    "left-sidebar header header"
     "left-sidebar main right-sidebar";
 }
 
 #header-block {
   grid-area: header;
   text-align: right;
+  margin: 1em;
 }
 
 #left-sidebar {
   grid-area: left-sidebar;
+  padding: .5em 0 0 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  text-align: center;
+  height: 100vh;
+  max-width: 30vw;
+  overflow: hidden;
 }
 
 #main-block {
   grid-area: main;
+  margin: 0 0 0 2em;
 }
 
 #right-sidebar {
@@ -51,6 +102,7 @@ code {
 
 .searchbar {
   width:80%;
+  margin:0 10%;
 }
 
 #show-tracks {}
@@ -59,7 +111,7 @@ code {
   width:80%;
   max-width:800px;
   margin:0;
-  background-color:#666;
+  background-color: rgba(0, 0, 0, 0.5);
   max-height: 20em;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -67,7 +119,7 @@ code {
 }
 
 .tracks-header {
-  background-color:#999;
+  background-color: rgba(0, 0, 0, 0.3);
   display:block;
   width: 80%;
   max-width:800px;
@@ -95,19 +147,19 @@ code {
 
 #my-playlists {}
 
-#search-playlists {}
-
-.playlist {
+#search-playlists {
   width:80%;
   max-width:800px;
-  margin:2em 0 0 0;
-  background-color:#666;
+  margin:0 10%;
+  background-color: rgba(0,255,255, 0.2);
   overflow-x: hidden;
+  overflow-y: auto;
   cursor: pointer;
+  max-height: calc(100vh - var(--offset) * 2);
 }
 
 .playlist-header {
-  background-color:#999;
+  background-color: rgba(0, 0, 0, 0.3);
   display:block;
   width:100%;
   margin:0;
@@ -125,6 +177,7 @@ code {
 .playlist-row {
   padding: .2em 0;
   display: block;
+  text-align: left;
 }
 .playlist-row:hover {
   background-color: rgba(255, 255, 255, 0.3);
@@ -168,4 +221,11 @@ code {
   margin: auto;
   max-height: 300px;
   /* max-width: 300px; */
+}
+
+.dark-button {
+  background-color: #022;
+}
+.dark-button:hover {
+  background-color: #244;
 }
